@@ -1,3 +1,10 @@
+Noughts and Crosses (0.3.1)
+
+	* Исправлена ошибка, при которой не происходило проверки одной из диагоналей на победу/возможную победу
+	* Добавлена возможность выхода из одиночной партии в главное меню по нажатию ESC
+	
+-Konstantin Zyryanov <post.herzog@gmail.com> Чт. 12 сент. 2013 22:49:29 YEKT
+
 Noughts and Crosses (0.3)
 
 	* Добавлено главное меню
